--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="assets/images/avatar.png" alt="Avatar" />
             <div class="profile-content pull-left">
-                <h1 class="name">Allie Gator</h1>
+                <h1 class="name">Spicy Silas</h1>
                 <h2 class="desc">Jr Java Developer</h2>   
                 <ul class="social list-inline">         
                     <li class="list-inline-item"><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
@@ -58,9 +58,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <p>
-                                I have been solving problems in Java since I was but a suckling on my mother's bosom. 
-								I have a degree in Computer Science from a prestigious R1 university. Pls hire me, I literally need food.
-								This is a template of dev portfolio. It is a work in progress. Slow progress. But progress none the less.
+                                I am spicy!
 								Come back later for some updates and news!
                             </p>
                         </div><!--//content-->
