--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2 class="desc">Jr Java Developer</h2>   
                 <ul class="social list-inline">         
                     <li class="list-inline-item"><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="https://github.com/sunnyntini"><i class="fa fa-github-alt"></i></a></li>  
+                    <li class="list-inline-item"><a href="https://github.com/sbucur99"><i class="fa fa-github-alt"></i></a></li>
 		            <li class="list-inline-item"><a href="#"><i class="fa fa-stack-overflow"></i></a></li>   
 		            <li class="list-inline-item last-item"><a href="#"><i class="fa fa-codepen"></i></a></li>     					
                 </ul> 
@@ -105,21 +105,21 @@
                     <div class="section-inner">
                         <h2 class="heading">Projects</h2>
                         <div class="item" name="project1">
-						<h3 class="title">A Java Based Rubix Cube Solver <span class="place" style="float:right;"><a href="https://github.com/sunnyntini"><i class="fa fa-github-alt"></i></a></span></h3>
+						<h3 class="title">A Java Based Rubix Cube Solver <span class="place" style="float:right;"><a href="https://github.com/sbucur99"><i class="fa fa-github-alt"></i></a></span></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                             </p>
                         </div><!--//content-->
 						 <div class="item"name="project2">
-						 <h3 class="title">SunnyWeathr - A Desktop Weather App <span class="place" style="float:right;"><a href="https://github.com/sunnyntini"><i class="fa fa-github-alt"></i></a></span></h3>
+						 <h3 class="title">SunnyWeathr - A Desktop Weather App <span class="place" style="float:right;"><a href="https://github.com/sbucur99"><i class="fa fa-github-alt"></i></a></span></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                             </p>
                         </div><!--//content-->
 						<div class="item"name="project3">
-						 <h3 class="title">Trellito - A Workflow Management Tool <span class="place" style="float:right;"><a href="https://github.com/sunnyntini"><i class="fa fa-github-alt"></i></a></span></h3>
+						 <h3 class="title">Trellito - A Workflow Management Tool <span class="place" style="float:right;"><a href="https://github.com/sbucur99"><i class="fa fa-github-alt"></i></a></span></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
