--- a/public/index.html
+++ b/public/index.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LOTW Window Cleaning</title>
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional exterior window cleaning in Raleigh. Fast, reliable, streak-free service. Get a free quote today!">
+    <title>Raleigh Exterior Window Cleaning | Silas Window Cleaning</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">🌞 LOTW Window Cleaning</div>
-    <nav>
-      <a href="#services">Services</a>
-      <a href="#areas">Service Areas</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    <header>
+        <div class="container">
+            <h1>Silas Window Cleaning</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <section class="hero">
-    <h1>Let Your Light Shine Through</h1>
-    <p>Professional window cleaning for homes and businesses</p>
-    <a href="#contact" class="cta-button">Get a Free Estimate</a>
-  </section>
+    <section class="hero">
+        <div class="container">
+            <h2>Professional Exterior Window Cleaning in Raleigh</h2>
+            <p>Fast, reliable, and streak-free service for homes and businesses.</p>
+            <a href="contact.html" class="btn">Get a Free Quote</a>
+        </div>
+    </section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul class="service-list">
-      <li>Interior & Exterior Window Cleaning</li>
-      <li>Screen & Sill Cleaning</li>
-      <li>Post-Construction Cleanup</li>
-      <li>Commercial & Residential</li>
-    </ul>
-  </section>
+    <section class="services-preview">
+        <div class="container">
+            <h3>Our Service</h3>
+            <p>Exterior window cleaning using professional equipment and safe techniques.</p>
+            <a href="services.html" class="btn">Learn More</a>
+        </div>
+    </section>
 
-  <section id="areas">
-    <h2>We Serve</h2>
-    <p>Apex, Raleigh, Holly Springs, Cary, and surrounding areas</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>📞 <strong>919-478-7327</strong></p>
-    <p>Sole Proprietor: Silas Bucur</p>
-    <img src="qr-code.png" alt="Scan to book" class="qr" />
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Light of the World Window Cleaning</p>
-  </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Silas Window Cleaning | Raleigh, NC | <a href="contact.html">Contact Us</a></p>
+        </div>
+    </footer>
 </body>
 </html>
-
