--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional exterior window cleaning in Raleigh. Fast, reliable, streak-free service. Get a free quote today!">
     <title>Raleigh Exterior Window Cleaning | Silas Window Cleaning</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
@@ -23,14 +23,36 @@
             </nav>
         </div>
     </header>
+   
 
-    <section class="hero">
-        <div class="container">
-            <h2>Professional Exterior Window Cleaning in Raleigh</h2>
-            <p>Fast, reliable, and streak-free service for homes and businesses.</p>
-            <a href="contact.html" class="btn">Get a Free Quote</a>
-        </div>
-    </section>
+<!-- Free Quote Button -->
+<a href="#" id="quoteBtn" class="btn">Get a Free Quote</a>
+
+<!-- Popup Modal -->
+<div id="quoteModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Get Your Free Quote</h2>
+    <form action="send_quote.php" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" required>
+
+        <label for="phone">Phone:</label>
+        <input type="tel" name="phone" id="phone">
+
+        <label for="address">Address:</label>
+        <input type="text" name="address" id="address" required>
+
+        <label for="message">Message / Service Details:</label>
+        <textarea name="message" id="message" required></textarea>
+
+        <button type="submit" class="btn">Send Quote</button>
+    </form>
+  </div>
+</div>
 
     <section class="services-preview">
         <div class="container">
@@ -45,5 +67,30 @@
             <p>&copy; 2025 Silas Window Cleaning | Raleigh, NC | <a href="contact.html">Contact Us</a></p>
         </div>
     </footer>
+
+     <script>
+// Get modal and button
+var modal = document.getElementById("quoteModal");
+var btn = document.getElementById("quoteBtn");
+var span = document.getElementsByClassName("close")[0];
+
+// Open modal when button is clicked
+btn.onclick = function(event) {
+    event.preventDefault(); // prevent default link behavior
+    modal.style.display = "block";
+}
+
+// Close modal when "x" is clicked
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// Close modal when clicking outside the modal content
+window.onclick = function(event) {
+    if(event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 </body>
 </html>
