--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional exterior window cleaning in Raleigh. Fast, reliable, streak-free service. Get a free quote today!">
     <title>Raleigh Exterior Window Cleaning | Silas Window Cleaning</title>
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css?v=1.0">
 </head>
 <body>
     <header>
