--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Get Your Free Quote</h2>
-    <form action="send_quote.php" method="POST">
+    <form action="https://formspree.io/f/mvgwajon" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name" required>
 
