--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional exterior window cleaning in Raleigh. Fast, reliable, streak-free service. Get a free quote today!">
     <title>Raleigh Exterior Window Cleaning | Silas Window Cleaning</title>
     <link rel="stylesheet" href="public/css/style.css?v=1.0">
+    <meta name="google-site-verification" content="VHTiEna8XfwPdL4Oi_MiDNRKzYbDpZRACgCVm95PTEQ" />
 </head>
 <body>
     <header>
